# TGAntiSpamBot

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
src/: main.rs
