[package]
name = "TGAntiSpamBot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
grammers-session = "0.8.0"
proc-exit = "2.0.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "local-time"] }
